<resources>
    <string name="app_name">FundooApp</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="fundoo_app">FUNDOO</string>
    <string name="or">or</string>
    <string name="log_in">Log in</string>
    <string name="register">SIGN UP</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="if_you_had_already_signup_login_here">if you had already signUp. login here</string>
    <string name="login">Log in</string>
    <string name="or_login_with">Or Login With</string>
    <string name="if_you_don_t_have_account_signup_here">if you don\'t have account Signup here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="fundoo">FUNDOO</string>
    <string name="loginhere">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_page">PageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="settings">Settings</string>
    <string name="trash">Trash</string>
    <string name="archive1">Archive</string>
    <string name="create_new_label">Create new label</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="logout">Logout</string>

    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="newlist">NewList</string>
    <string name="newdrawingnote">NewDrawingNote</string>
    <string name="newaudionote">NewAudioNote</string>
    <string name="newphotonote">NewPhotoNote</string>
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="username">username</string>
    <string name="pin">pin</string>
    <string name="alert">Alert</string>
    <string name="archive2">Archive</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="share">Share</string>
    <string name="labels">Labels</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="unarchive">UnArchive</string>
    <string name="add_reminder">Add reminder</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
</resources>