<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment"
    android:id="@+id/register_Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fundoo_img1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".84"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="signUp"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/create_a_new_account"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            app:layout_constraintBottom_toBottomOf="@+id/Layout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.184">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:hint="@string/full_name"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:hint="@string/username"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/signUp_Email"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="99dp"
                android:hint="@string/email"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="149dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/confirm_Password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="200dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp" />

        </FrameLayout>

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="#ffca41"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />

        <TextView
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="216dp"
            android:clickable="true"
            android:text="@string/if_you_had_already_signup_login_here"
            android:textColor="@color/light_blue_900"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_with"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.765" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.995"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/googleIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/white"
                android:elevation="35dp"
                android:src="@drawable/google"
                app:backgroundTint="#ffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/white"
                android:elevation="35dp"
                android:src="@drawable/facebook"
                app:backgroundTint="#ffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/white"
                android:elevation="35dp"
                android:src="@drawable/twitter"
                app:backgroundTint="#ffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>